Add routing information
Change-Id: I76d275d3920a64930594e151559a5e746a56ea52

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ grafana:
     - INFLUXDB_NAME=cadvisor
     - INFLUXDB_USER=root
     - INFLUXDB_PASS=root
+  labels:
+    aliyun.routing.port_3000: 'http://grafana'
 config:
   image: registry.aliyuncs.com/acs-sample/grafana-config
   links:
